--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "big-time",
   "version": "1.0.0",
-  "description": "Long timeout makes it possible to have a timeout that is longer than 24.8 days (2^31-1 milliseconds).",
+  "description": "Big time makes it possible to have a timeout that is longer than 24.8 days (2^31-1 milliseconds).",
   "main": "lib/index.js",
   "scripts": {
     "test": "lab -m 5000 -t 100 -v -La code",
