--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "description": "Big time makes it possible to have a timeout that is longer than 24.8 days (2^31-1 milliseconds).",
   "main": "lib/index.js",
   "scripts": {
-    "test": "lab -T test/transformer.js -m 5000 -t 90 -v -La code",
+    "test": "npm run lint && lab -T test/transformer.js -v -t 90 -a code -m 10000",
     "compile": "babel src --out-dir lib",
+    "lint": "eslint src",
     "prepublish": "npm run compile"
   },
   "repository": {
@@ -19,10 +20,12 @@
   },
   "homepage": "https://github.com/continuationlabs/big-time",
   "devDependencies": {
-    "babel": "5.5.x",
-    "babel-core": "5.5.x",
+    "babel": "5.6.x",
+    "babel-core": "5.6.x",
     "babel-eslint": "3.1.x",
     "code": "1.x.x",
+    "eslint": "0.23.x",
+    "eslint-plugin-hapi": "1.x.x",
     "lab": "5.x.x"
   }
 }
