--- a/.eslintrc
+++ b/.eslintrc
@@ -1,9 +1,3 @@
 {
- "extends": "./node_modules/lab/lib/linters/eslint/.eslintrc",
- "parser": "babel-eslint",
- "rules": {
-    "lines-around-comment": 0,
-    "no-shadow": 0,
-    "hapi/hapi-scope-start": [1, "allow-one-liners", 2]
- }
+ "extends": "eslint-config-hapi"
 }
