--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Big time makes it possible to have a timeout that is longer than 24.8 days (2^31-1 milliseconds).",
   "main": "lib/index.js",
   "scripts": {
-    "test": "npm run lint && lab -T test/transformer.js -v -t 90 -a code -m 10000",
+    "test": "npm run lint && lab -T test/transformer.js -v -t 94 -a code -m 10000",
     "compile": "babel src --out-dir lib",
     "lint": "eslint src",
     "prepublish": "npm run compile"
@@ -20,12 +20,12 @@
   },
   "homepage": "https://github.com/continuationlabs/big-time",
   "devDependencies": {
-    "babel": "5.6.x",
-    "babel-core": "5.6.x",
-    "babel-eslint": "3.1.x",
+    "babel": "5.8.x",
+    "babel-core": "5.8.x",
     "code": "1.x.x",
-    "eslint": "0.23.x",
+    "eslint": "1.x.x",
+    "eslint-config-hapi": "3.x.x",
     "eslint-plugin-hapi": "1.x.x",
-    "lab": "5.x.x"
+    "lab": "6.x.x"
   }
 }
