--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Big time makes it possible to have a timeout that is longer than 24.8 days (2^31-1 milliseconds).",
   "main": "lib/index.js",
   "scripts": {
-    "test": "npm run lint && lab -T test/transformer.js -v -t 100 -a code -m 10000",
+    "test": "npm run lint && lab -T test/transformer.js -I __core-js_shared__ -v -t 100 -a code -m 10000",
     "compile": "babel src --out-dir lib",
     "lint": "belly-button --i 'src/**.js' --i 'test/**.js'",
     "prepublish": "npm run compile"
@@ -20,8 +20,9 @@
   },
   "homepage": "https://github.com/continuationlabs/big-time",
   "devDependencies": {
-    "babel": "5.8.x",
-    "babel-core": "5.8.x",
+    "babel-cli": "6.1.x",
+    "babel-core": "6.0.x",
+    "babel-preset-es2015": "6.0.x",
     "belly-button": "1.x.x",
     "code": "1.x.x",
     "lab": "6.x.x"
