--- a/package.json
+++ b/package.json
@@ -2,15 +2,15 @@
   "name": "big-time",
   "version": "2.0.0",
   "description": "Big time makes it possible to have a timeout that is longer than 24.8 days (2^31-1 milliseconds).",
-  "author": "Continuation Labs <contact@continuation.io> (http://continuation.io/)",
+  "author": "Adam Bretz <arbretz@gmail.com>",
   "main": "lib/index.js",
-  "homepage": "https://github.com/continuationlabs/big-time",
+  "homepage": "https://github.com/arb/big-time",
   "repository": {
     "type": "git",
-    "url": "git://github.com/continuationlabs/big-time.git"
+    "url": "git://github.com/arb/big-time.git"
   },
   "bugs": {
-    "url": "https://github.com/continuationlabs/big-time/issues"
+    "url": "https://github.com/arb/big-time/issues"
   },
   "license": "MIT",
   "scripts": {
