--- a/package.json
+++ b/package.json
@@ -21,7 +21,11 @@
     "node": ">=6.0.0"
   },
   "devDependencies": {
-    "belly-button": "4.x.x",
+    "eslint": "4.19.1",
+    "eslint-config-airbnb": "17.0.0",
+    "eslint-plugin-import": "2.13.0",
+    "eslint-plugin-jsx-a11y": "6.1.1",
+    "eslint-plugin-react": "7.10.0",
     "lab": "14.x.x"
   }
 }
